<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_cardio">


    <Button
        android:id="@+id/bSaveCardio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/button_cardio"
        android:text="@string/button_save_cardio"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_cardio"
        android:textColor="@color/black_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNameCardio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_new_cardio"
        android:inputType="textPersonName"
        android:textColorHint="@color/text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time_hint"
        android:inputType="time"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toTopOf="@+id/bSaveCardio"
        app:layout_constraintStart_toStartOf="@+id/bSaveCardio"
        app:layout_constraintTop_toBottomOf="@+id/edNameCardio" />

    <EditText
        android:id="@+id/edDist"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/distance_hint"
        android:inputType="numberDecimal"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toTopOf="@+id/bSaveCardio"
        app:layout_constraintEnd_toEndOf="@+id/bSaveCardio"
        app:layout_constraintTop_toBottomOf="@+id/edNameCardio" />

</androidx.constraintlayout.widget.ConstraintLayout>